premiere ebauche du lien entre lexing et parsing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
 		"minishell_exec.h": "c",
 		"minishell_parsing.h": "c",
 		"minishell_data.h": "c",
-		"minishell.h": "c"
+		"minishell.h": "c",
+		"minishell_typedefs.h": "c"
 	}
 }
