--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
 		"minishell_parsing.h": "c",
 		"minishell_data.h": "c",
 		"minishell.h": "c",
-		"minishell_typedefs.h": "c"
+		"minishell_typedefs.h": "c",
+		"type_traits": "c"
 	}
 }
