Construction squelette exec + reorganisation programme. L'exec suit les regles de priorite. Recuperation des codes d'erreur a faire

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,8 @@
 		"minishell_data.h": "c",
 		"minishell.h": "c",
 		"minishell_typedefs.h": "c",
-		"type_traits": "c"
+		"type_traits": "c",
+		"history.h": "c",
+		"minishell_error_and_signal_manager.h": "c"
 	}
 }
