--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,9 +9,13 @@
                 "-g3",
                 "${workspaceFolder}/srcs/*.c",
 				"${workspaceFolder}/srcs/built-in/*.c",
+				"${workspaceFolder}/srcs/error_and_event_manager/*.c",
 				"${workspaceFolder}/srcs/exec/*.c",
 				"${workspaceFolder}/srcs/lexer/*.c",
+				"${workspaceFolder}/srcs/lexer/utils/*.c",
+				"${workspaceFolder}/srcs/messager/*.c",
 				"${workspaceFolder}/srcs/parsing/*.c",
+				"${workspaceFolder}/srcs/shell/*.c",
 				"${workspaceFolder}/srcs/utils/*.c",
 				"${workspaceFolder}/libft/libft.a",
                 "-I",
