--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,7 +37,7 @@
             "name": "Debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/a.out",
+            "program": "${workspaceFolder}/minishell",
             "args": [""],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -50,18 +50,18 @@
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 },
-                // {
-                //     // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
-                //     "description": "Fork follows Child process",
-                //     "text": "set follow-fork-mode child",
-                //     "ignoreFailures": true
-                // },
-                // {
-                //     // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
-                //     "description": "Fork will keep the other process attached to debugger",
-                //     "text": "set detach-on-fork off",
-                //     "ignoreFailures": true
-                // }
+                {
+                    // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
+                    "description": "Fork follows Child process",
+                    "text": "set follow-fork-mode child",
+                    "ignoreFailures": true
+                },
+                {
+                    // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
+                    "description": "Fork will keep the other process attached to debugger",
+                    "text": "set detach-on-fork off",
+                    "ignoreFailures": true
+                }
             ],
             "preLaunchTask": "build"
         }, */
