Amelioration des messages d'erreur + correction erreur dans fd_in et fd_out, ils n'ecrasent plus la tete de la liste chainee

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,8 @@
 				"${workspaceFolder}/srcs/built-in/*.c",
 				"${workspaceFolder}/srcs/error_and_event_manager/*.c",
 				"${workspaceFolder}/srcs/exec/*.c",
+				"${workspaceFolder}/srcs/exec/command_build/*.c",
+				"${workspaceFolder}/srcs/exec/redirections/*.c",
 				"${workspaceFolder}/srcs/lexer/*.c",
 				"${workspaceFolder}/srcs/lexer/utils/*.c",
 				"${workspaceFolder}/srcs/messager/*.c",
@@ -57,3 +59,4 @@
         }
     ]
 }
+
