--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,32 +1,12 @@
 {
     "version": "0.2.0",
     "configurations": [
-        // {
-        //     "name": "Debug",
-        //     "type": "cppdbg",
-        //     "request": "launch",
-        //     "program": "${workspaceFolder}/minishell",
-        //     "args": [],
-        //     "stopAtEntry": false,
-        //     "cwd": "${workspaceFolder}",
-        //     "environment": [],
-        //     "externalConsole": false,
-        //     "MIMode": "gdb",
-        //     "setupCommands": [
-        //         {
-        //             "description": "Enable pretty-printing for gdb",
-        //             "text": "-enable-pretty-printing",
-        //             "ignoreFailures": true
-        //         },
-        //     ],
-        //     "preLaunchTask": "build"
-        // },
- 		{
+        {
             "name": "Debug",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/minishell",
-            "args": [""],
+            "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -38,20 +18,40 @@
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 },
-                {
-                    // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
-                    "description": "Fork follows Child process",
-                    "text": "set follow-fork-mode child",
-                    "ignoreFailures": true
-                },
-                {
-                    // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
-                    "description": "Fork will keep the other process attached to debugger",
-                    "text": "set detach-on-fork off",
-                    "ignoreFailures": true
-                }
             ],
             "preLaunchTask": "build"
         },
+ 		// {
+        //     "name": "Debug",
+        //     "type": "cppdbg",
+        //     "request": "launch",
+        //     "program": "${workspaceFolder}/minishell",
+        //     "args": [""],
+        //     "stopAtEntry": false,
+        //     "cwd": "${workspaceFolder}",
+        //     "environment": [],
+        //     "externalConsole": false,
+        //     "MIMode": "gdb",
+        //     "setupCommands": [
+        //         {
+        //             "description": "Enable pretty-printing for gdb",
+        //             "text": "-enable-pretty-printing",
+        //             "ignoreFailures": true
+        //         },
+        //         {
+        //             // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
+        //             "description": "Fork follows Child process",
+        //             "text": "set follow-fork-mode child",
+        //             "ignoreFailures": true
+        //         },
+        //         {
+        //             // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
+        //             "description": "Fork will keep the other process attached to debugger",
+        //             "text": "set detach-on-fork off",
+        //             "ignoreFailures": true
+        //         }
+        //     ],
+        //     "preLaunchTask": "build"
+        // },
     ]
 }
