--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
 		"type_traits": "c",
 		"history.h": "c",
 		"minishell_error_and_signal_manager.h": "c",
-		"minishell_structures_enums.h": "c"
+		"minishell_structures_enums.h": "c",
+		"wait.h": "c"
 	}
 }
