--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,6 +19,7 @@
 				"${workspaceFolder}/srcs/parsing/*.c",
 				"${workspaceFolder}/srcs/shell/*.c",
                 "${workspaceFolder}/srcs/wildcards/*.c",
+                "${workspaceFolder}/srcs/wildcards/utils/*.c",
 				"${workspaceFolder}/libft/libft.a",
                 "-I",
                 "${workspaceFolder}/includes",
