Push00: Protection: Protection des fonctions sensibles et creations d'alias pour les appels systemes dup, dup2, pipe, fork

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,6 +21,7 @@
                 "${workspaceFolder}/srcs/shell/*.c",
                 "${workspaceFolder}/srcs/wildcards/*.c",
                 "${workspaceFolder}/srcs/wildcards/utils/*.c",
+				"${workspaceFolder}/srcs/syscalls/*.c",
                 "${workspaceFolder}/libft/libft.a",
                 "-I",
                 "${workspaceFolder}/includes",
