--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,7 +21,7 @@
                 "${workspaceFolder}/srcs/shell/*.c",
                 "${workspaceFolder}/srcs/wildcards/*.c",
                 "${workspaceFolder}/srcs/wildcards/utils/*.c",
-				"${workspaceFolder}/srcs/syscalls/*.c",
+				"${workspaceFolder}/srcs/wrappers/*.c",
                 "${workspaceFolder}/libft/libft.a",
                 "-I",
                 "${workspaceFolder}/includes",
