--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
 		"minishell_error_and_signal_manager.h": "c",
 		"minishell_structures_enums.h": "c",
 		"wait.h": "c",
-		"wildcards.h": "c"
+		"wildcards.h": "c",
+		"typeinfo": "c"
 	}
 }
